# MemoryVLA_VJEPA2

./: README.md  deploy.py  pyproject.toml  train.py
action_model/: __init__.py  action_model.py  diffusion_utils.py  gaussian_diffusion.py  models.py
conf/: vla.py
evaluation/libero/: eval_libero.py  libero_utils.py  robot_utils.py  tensor_utils.py  utils.py  vla_policy.py
evaluation/simpler_env/: __init__.py  adaptive_ensemble.py  maniskill2_evaluator.py  simpler_env_inference.py  vla_policy.py
prismatic/conf/: models.py
prismatic/models/: __init__.py  materialize.py  registry.py
prismatic/models/backbones/llm/: llama2.py
prismatic/models/backbones/vision/: __init__.py  vjepa2_vit.py
prismatic/models/vlms/: prismatic.py
prismatic/util/: data_utils.py
script/eval/bridge/: eval_bridge.sh  extract_bridge_results.py
script/eval/fractal/: eval_fractal.sh  extract_fractal_results.py
script/eval/fractal/task_scripts/: coke_can_va.sh  coke_can_vm.sh  drawer_va.sh  drawer_vm.sh  move_near_va.sh  move_near_vm.sh  put_in_drawer_va.sh  put_in_drawer_vm.sh
script/eval/libero/: eval_libero.sh  eval_memvla_libero10.sh  eval_memvla_libero10_final.sh  extract_libero_results.py
script/eval/real_world/: deploy.sh
script/train/bridge/: train_bridge.sh
script/train/fractal/: train_fractal.sh
script/train/libero/: train_libero_100.sh  train_libero_goal.sh  train_libero_object.sh  train_libero_spatial.sh
script/train/real_world/: train_real.sh
training/: materialize.py  metrics.py
training/strategies/: __init__.py  base_strategy.py  fsdp.py
vla/: __init__.py  action_tokenizer.py  load.py  materialize.py  memory_vla.py
vla/datasets/: __init__.py  datasets.py
vla/datasets/rlds/: __init__.py  dataset.py
vla/datasets/rlds/oxe/: configs.py  materialize.py  mixtures.py  transforms.py
vla/datasets/rlds/utils/: goal_relabeling.py  task_augmentation.py
