[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "memvla"
authors = [
    {name="Hao Shi.", email="shi-h23@mails.tsinghua.edu.cn"},
]
description = "MemoryVLA: Perceptual-Cognitive Memory in Vision-Language-Action Models for Robotic Manipulation"
version = "0.0.1"
readme = "README.md"
requires-python = "==3.10"
keywords = ["vision-language-actions models", " robotic manipulation", "memory"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "flash_attn==2.5.5",
    "accelerate>=0.25.0",
    "draccus>=0.8.0",
    "einops",
    "huggingface_hub",
    "json-numpy",
    "jsonlines",
    "matplotlib",
    "peft==0.11.1",
    "protobuf",
    "rich",
    "sentencepiece==0.1.99",
    "timm==0.9.10",
    "tokenizers==0.19.1",
    "transformers==4.40.1",
    "wandb",
    "tensorflow==2.15.0",
    "tensorflow_datasets==4.9.3",
    "tensorflow_graphics==2021.12.3",
    "huggingface-hub==0.29.3",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "dlimp @ git+https://github.com/moojink/dlimp_openvla",

    # for evaluation
    "imageio==2.37.0",
    "flask",
    "mediapy==1.2.0",
    "hydra-core==1.2.0",
    "easydict",
    "thop",
    "bddl==1.0.1",
    "future==0.18.2",
    "cloudpickle==2.1.0",
    "gym==0.25.2",
    "robosuite==1.4.0",
    "robomimic==0.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
sagemaker = [
    "boto3",
    "sagemaker"
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]

[tool.setuptools.package-data]
"memvla" = ["py.typed"]

[tool.black]
line-length = 121
target-version = ["py38", "py39", "py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
